# core-sol-bridge-sc

./: .gitignore  Anchor.toml  Cargo.toml  README.md  env.copy  package-lock.json  package.json  tsconfig.json
interactions/: Cargo.toml
interactions/src/: admin_endpoints.rs  main.rs  utils.rs
programs/bridge-program/: Cargo.toml
programs/bridge-program/src/: constants.rs  errors.rs  events.rs  lib.rs  macros.rs  utils.rs
programs/bridge-program/src/contexts/: add_liquidity.rs  add_to_whitelist.rs  add_token_whitelist.rs  contract_state.rs  contract_states.rs  deposit_limits.rs  finalize_bridge.rs  initialize_contract.rs  intialize_bridge.rs  mod.rs  pause.rs  remove_liquidity.rs  send_from_liquidity.rs  send_to_liquidity.rs  unpause.rs  update_fee_collector.rs  update_relayer.rs  update_whitelisted_mint.rs
programs/bridge-program/src/contexts/whitelist/: add_to_whitelist.rs  mod.rs  remove_from_whitelist.rs  whitelist_state.rs
programs/bridge-program/src/states/: bridge.rs  mod.rs  stage.rs  whitelist.rs
tests/: bridge-program.ts
