[package]
name = "bridge-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "bridge_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.30.0", features = ["init-if-needed"]}
solana-program = "1.18.15"
spl-token = "4.0.0"
anchor-spl = "0.30.0"
